RESOLVED FIXED 80240
[Forms] The "progress" element should not be a form-associated element.
https://bugs.webkit.org/show_bug.cgi?id=80240
Summary [Forms] The "progress" element should not be a form-associated element.
yosin
Reported 2012-03-04 21:40:35 PST
According the specification, the "progress" element isn't a form-associate element. http://www.whatwg.org/specs/web-apps/current-work/multipage/forms.html#form-associated-element However, current implementation of HTMLProgressElement is derived from HTMLFormControlElement. We have unexpected dependency between HTMLProgressElement and HTMLFormControlElement and FormAssociatedElement. Also, We waste time in loop of HTMLFormElement::m_associatedElements. For clear understanding and better maintainability, it is better that C++ class hierarchy should be similar to specified in the specification.
Attachments
Patch 1 (15.92 KB, patch)
2012-03-16 01:28 PDT, yosin
no flags
Patch 2 (15.92 KB, patch)
2012-03-16 03:19 PDT, yosin
no flags
yosin
Comment 1 2012-03-05 23:00:05 PST
This bug is part of HTMLFormControlElement re-factoring meta bug https://bugs.webkit.org/show_bug.cgi?id=80381
yosin
Comment 2 2012-03-16 01:28:19 PDT
Kent Tamura
Comment 3 2012-03-16 02:48:14 PDT
Comment on attachment 132228 [details] Patch 1 View in context: https://bugs.webkit.org/attachment.cgi?id=132228&action=review > Source/WebCore/ChangeLog:10 > + extra "meter" elements in HTMLFormElement::m_formAssociatedElements This is not a "meter"
yosin
Comment 4 2012-03-16 03:19:36 PDT
yosin
Comment 5 2012-03-16 03:20:17 PDT
(In reply to comment #3) > (From update of attachment 132228 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=132228&action=review > > > Source/WebCore/ChangeLog:10 > > + extra "meter" elements in HTMLFormElement::m_formAssociatedElements > > This is not a "meter" Oops, I forgot to update this one... orz
Kent Tamura
Comment 6 2012-03-16 03:20:57 PDT
Comment on attachment 132240 [details] Patch 2 ok
WebKit Review Bot
Comment 7 2012-03-16 08:01:32 PDT
Comment on attachment 132240 [details] Patch 2 Clearing flags on attachment: 132240 Committed r111009: <http://trac.webkit.org/changeset/111009>
WebKit Review Bot
Comment 8 2012-03-16 08:01:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.